crates/snapshot-tests/tests/snapshots/de__missing_required.snap
---
source: crates/snapshot-tests/tests/de.rs
expression: combined
---
error[MissingField]: missing required key 's'
  ┌─ missing_required:1:1
  │
1 │ os = 20
  │ ^^^^^^^ missing key 's'


error: missing required key 's'
 --> missing_required:1:1
  |
1 | os = 20
  | ^^^^^^^ missing key 's'
[
    Error {
        kind: "MissingField",
        message: "missing required key 's'",
        span: 0..7,
        path: None,
    },
]
